<resources>
    <string name="app_name">Ocelot</string>
    <string name="app_service_name">OcelotClient</string>
    <string name="app_description"><![CDATA[
        <p>Ocelot is an open source Android client for the Lichat chat protocol.</p><br/>
        <p>You can obtain the source code for Ocelot on <a href="https://shirakumo.org/project/Ocelot">GitHub</a>.</p><br/>
        <p>Ocelot and Lichat are &copy; 2017 Shirakumo, <a href="https://shirakumo.org">www.shirakumo.org</a></p>
    ]]></string>
    <string name="button_ok">Ok</string>
    <string name="button_send_file">Send file</string>
    <string name="button_open_emotes">Open emote drawer</string>
    <string name="input_message">Enter your chat message</string>
    <string name="input_channel_name">Channel name</string>
    <string name="input_user_name">User name</string>
    <string name="input_password">Password</string>
    <string name="input_hostname">Server hostname</string>
    <string name="input_port">Server port</string>
    <string name="service_title">Ocelot</string>
    <string name="service_message">Ocelot is connected.</string>
    <string name="notification_group">Ocelot Notifications</string>
    <string name="notification_channel_service">Ocelot Service</string>
    <string name="notification_channel_service_description">Channel for the background service notification</string>
    <string name="notification_channel_updates">Ocelot Updates</string>
    <string name="notification_channel_updates_description">Notifications about messages and updates from the Ocelot chat</string>
    <string name="setting_connection">Connection</string>
    <string name="setting_connection_summary">Account and Server connection settings</string>
    <string name="setting_username">Username</string>
    <string name="setting_username_summary">Your username to connect with</string>
    <string name="setting_password">Password</string>
    <string name="setting_password_summary">The password to use if you registered your account</string>
    <string name="setting_hostname">Server Hostname</string>
    <string name="setting_hostname_summary">The hostname or IP address of the Lichat server</string>
    <string name="setting_port">Server Port</string>
    <string name="setting_port_summary">The TCP port to connect to the server with</string>
    <string name="setting_autoconnect">Connect on start</string>
    <string name="setting_autoconnect_summary">Connect immediately when Ocelot starts</string>
    <string name="setting_channels">Channels to join</string>
    <string name="setting_channels_summary">Which channels to join after connecting</string>
    <string name="setting_notification">Notification</string>
    <string name="setting_notification_summary">How and when to display notifications</string>
    <string name="setting_notifications">Show Notifications</string>
    <string name="setting_notifications_summary"></string>
    <string name="setting_notify_system">System Notifications</string>
    <string name="setting_notify_system_summary">Go to system notification settings</string>
    <string name="setting_notify_message">Notify on message</string>
    <string name="setting_notify_message_summary">Show a notification on every message</string>
    <string name="setting_notify_mention">Notify on mention</string>
    <string name="setting_notify_mention_summary">Show a notification when you are mentioned</string>
    <string name="setting_notify_sound">Notification sound</string>
    <string name="setting_notify_sound_summary">The sound to play on a notification</string>
    <string name="setting_notify_vibrate">Vibration</string>
    <string name="setting_notify_vibrate_summary">Vibrate when a notification arrives</string>
    <string name="setting_notify_light">Notification Light</string>
    <string name="setting_notify_light_summary">Make the phone show its light when a notification arrives</string>
    <string name="setting_notify_light_color">Light Colour</string>
    <string name="setting_notify_light_color_summary">The colour of the notification light</string>
    <string name="setting_looks">Looks</string>
    <string name="setting_looks_summary">Change the look of the chat</string>
    <string name="setting_look_fontsize">Font size</string>
    <string name="setting_look_fontsize_summary">The default font size of the chat in pt</string>
    <string name="setting_look_self">Own username color</string>
    <string name="setting_look_self_summary">The colour of your own username</string>
    <string name="setting_look_background">Background color</string>
    <string name="setting_look_background_summary">The background colour of the chat</string>
    <string name="setting_look_foreground">Foreground color</string>
    <string name="setting_look_foreground_summary">The text colour of the chat</string>
    <string name="setting_look_link">Link color</string>
    <string name="setting_look_link_summary">The colour of links</string>
    <string name="setting_look_mention">Mention highlight</string>
    <string name="setting_look_mention_summary">The colour to highlight mentions with</string>
    <string name="setting_look_emotes">Show emotes</string>
    <string name="setting_look_emotes_summary">Will turn :emotes: into images</string>
    <string name="setting_look_data">Show data</string>
    <string name="setting_look_data_summary">Will show images, videos, etc. in-line</string>
    <string name="drawer_channels">Channels</string>
    <string name="drawer_manage">Manage</string>
    <string name="drawer_join">Join Channel</string>
    <string name="drawer_close">Leave Channel</string>
    <string name="drawer_create">Create Channel</string>
    <string name="drawer_pull">Pull User to Channel</string>
    <string name="drawer_kick">Kick User from Channel</string>
    <string name="drawer_connect">Connect</string>
    <string name="drawer_disconnect">Disconnect</string>
    <string name="drawer_system">System</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_quit">Quit</string>
    <string name="drawer_about">About</string>
    <string name="setup_title">Welcome to Ocelot</string>
    <string name="setup_userinfo">User information</string>
    <string name="setup_serverinfo">Server information</string>
    <string name="setup_autoconnect">Automatically connect on start</string>
    <string name="setup_complete">Finish</string>
    <string name="setup_registered">Registered</string>
</resources>
