<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/setting_notification">
        <Preference
            android:key="system_notifications"
            android:title="@string/setting_notify_system"
            android:summary="@string/setting_notify_system_summary" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications"
            android:title="@string/setting_notifications"
            android:summary="@string/setting_notifications_summary" />
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="notifications"
            android:key="notify_mention"
            android:title="@string/setting_notify_mention"
            android:summary="@string/setting_notify_mention_summary" />
        <SwitchPreference
            android:defaultValue="false"
            android:dependency="notifications"
            android:key="notify_message"
            android:title="@string/setting_notify_message"
            android:summary="@string/setting_notify_message_summary" />
        <RingtonePreference
            android:dependency="notifications"
            android:key="notify_sound"
            android:ringtoneType="notification"
            android:title="@string/setting_notify_sound"
            android:summary="@string/setting_notify_sound_summary" />
        <SwitchPreference
            android:defaultValue="false"
            android:dependency="notifications"
            android:key="notify_vibrate"
            android:summary="@string/setting_notify_vibrate_summary"
            android:title="@string/setting_notify_vibrate" />
        <SwitchPreference
            android:defaultValue="false"
            android:dependency="notifications"
            android:key="notify_light"
            android:summary="@string/setting_notify_light_summary"
            android:title="@string/setting_notify_light" />
        <com.rarepebble.colorpicker.ColorPreference
            android:defaultValue="?android:attr/colorActivatedHighlight"
            android:dependency="notify_light"
            android:key="notify_light_color"
            android:summary="@string/setting_notify_light_color_summary"
            android:title="@string/setting_notify_light_color" />
    </PreferenceCategory>
</PreferenceScreen>
